--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,8 +7,10 @@ authors = ["Logan Jones <loganemilyjones@mac.com>"]
 [tool.poetry.dependencies]
 python = "^3.9"
 Django = "^3.1.7"
+djangorestframework = "^3.12.2"
 
 [tool.poetry.dev-dependencies]
+autopep8 = "^1.5.6"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
